apps/weave-gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weave-gitops
  namespace: weave-gitops
  labels:
    app: weave-gitops
spec:
  selector:
    app: weave-gitops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
