apps/weave-gitops/weave-gitops-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops-route
  namespace: weave-gitops
spec:
  parentRefs:
  - name: api-gateway
    kind: Gateway
    namespace: gateway-api
  hostnames:
  - gitops.matheus.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: weave-gitops
      kind: Service
      port: 9001
